redis-cli-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis-cli
  namespace: demo
  labels:
    app: redis-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cli
  template:
    metadata:
      name: redis-cli
      labels:
        app: redis-cli
    spec:
      containers:
        - name: redis-cli
          # update image id (manual or via jenkins)
          image: redis
          # limiting cpu & mem usage of a pod
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 200Mi
          command: ["/bin/sh"]
          args: ["-c", "sleep 100000"]

      restartPolicy: Always
