upg-loadme-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upg-loadme
  namespace: demo
  labels:
    app: upg-loadme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upg-loadme
  template:
    metadata:
      name: upg-loadme
      labels:
        app: upg-loadme
    spec:
      containers:
        - name: upg-loadme
          # update image id (manual or via jenkins)
          image: 587173959192.dkr.ecr.us-east-1.amazonaws.com/upg-loadme-app:latest
          # limiting cpu & mem usage of a pod
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 150m
              memory: 150Mi
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      # add tolerations to restrict running on selected nodes


---

kind: Service
apiVersion: v1
metadata:
  name: upg-loadme
  namespace: demo
spec:
  selector:
    app: upg-loadme
  type: ClusterIP
  ports:
  - name: app-port
    protocol: TCP
    port: 80
    targetPort: 8081
